added all button to category layouts

--- a/_layouts/category_all.html
+++ b/_layouts/category_all.html
@@ -13,6 +13,7 @@ layout: default
         <a href="/category/{{ c_slug }}" class="btn btn-sm btn-default btn-tags">{{ c_slug }}</a>
     {% endfor %}
   {% endfor %}
+  <button class="btn btn-sm btn-default active btn-tags">All</button>
 
   <hr />
   {% if true %}
