--- a/_layouts/posts_by_category.html
+++ b/_layouts/posts_by_category.html
@@ -17,6 +17,7 @@ layout: default
       {% endif %}
     {% endfor %}
   {% endfor %}
+  <a href="/category/all" class="btn btn-sm btn-default btn-tags">All</a>
 
   <hr />
   {% if site.categories[page.categories] %}
