--- a/_layouts/category_all.html
+++ b/_layouts/category_all.html
@@ -16,7 +16,7 @@ layout: default
   <button class="btn btn-sm btn-default active btn-tags">All</button>
 
   <hr />
-    {% for post in site.categories[page.categories] %}
+    {% for post in site.categories[site.categories] %}
       {% capture post_year %}{{ post.date | date: '%Y' }}{% endcapture %}
       {% if forloop.first %}
           <h4>{{ post_year }}</h4>
