--- a/_layouts/category_all.html
+++ b/_layouts/category_all.html
@@ -16,7 +16,7 @@ layout: default
   <button class="btn btn-sm btn-default active btn-tags">All</button>
 
   <hr />
-    {% for post in site.categories[site.categories] %}
+    {% for post in site.posts %}
       {% capture post_year %}{{ post.date | date: '%Y' }}{% endcapture %}
       {% if forloop.first %}
           <h4>{{ post_year }}</h4>
@@ -25,7 +25,7 @@ layout: default
 
       {% if forloop.first == false %}
         {% assign previous_index = forloop.index0 | minus: 1 %}
-        {% capture previous_post_year %}{{ site.categories[page.categories][previous_index].date | date: '%Y' }}{% endcapture %}
+        {% capture previous_post_year %}{{ site.posts[previous_index].date | date: '%Y' }}{% endcapture %}
         {% if post_year != previous_post_year %}
           </div>
           <h4>{{ post_year }}</h4>
