--- a/_layouts/category_all.html
+++ b/_layouts/category_all.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <header class="post-header">
-  <h1 class="post-title">Articles by category: {{ page.categories }}</h1>
+  <h1 class="post-title">Articles by category</h1>
 </header>
 
 <div class="post-content">
@@ -33,7 +33,7 @@ layout: default
         {% endif %}
       {% endif %}
         <ul class="posts">
-          <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <i><span>{{ post.date | date_to_string }}</span></i></li>
+		<li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <span>{{ post.author }}</span> &raquo; <i><span>{{ post.date | date_to_string }}</span></i></li>
         </ul>
       {% if forloop.last %}
         </div>
