--- a/_layouts/posts_by_category.html
+++ b/_layouts/posts_by_category.html
@@ -38,7 +38,7 @@ layout: default
         {% endif %}
       {% endif %}
         <ul class="posts">
-          <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <i><span>{{ post.date | date_to_string }}</span></i></li>
+		<li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <span>{{ post.author }}</span> &raquo;<i><span>{{ post.date | date_to_string }}</span></i></li>
         </ul>
       {% if forloop.last %}
         </div>
